--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Gaussian Temporal Awareness Networks for Action Localization, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Long_Gaussian_Temporal_Awareness_Networks_for_Action_Localization_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Gaussian%20Temporal%20Awareness%20Networks%20for%20Action%20Localization.pdf)] (1)
 - Auto-DeepLab: Hierarchical Neural Architecture Search for Semantic Image Segmentation, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Auto-DeepLab_Hierarchical_Neural_Architecture_Search_for_Semantic_Image_Segmentation_CVPR_2019_paper.pdf)] [[code](https://github.com/tensorflow/models/tree/master/research/deeplab)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Auto-DeepLab-%20Hierarchical%20Neural%20Architecture%20Search%20for%20Semantic%20Image%20Segmentation.pdf)] (1)
 
 2020 Jan
