Bidirectional Learning for Domain Adaptation of Semantic Segmentation (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Bidirectional Learning for Domain Adaptation of Semantic Segmentation, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Li_Bidirectional_Learning_for_Domain_Adaptation_of_Semantic_Segmentation_CVPR_2019_paper.pdf)] [[code](https://github.com/liyunsheng13/BDL)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Bidirectional%20Learning%20for%20Domain%20Adaptation%20of%20Semantic%20Segmentation.pdf)] (1)
 - Representation Similarity Analysis for Efficient Task taxonomy & Transfer Learning, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Dwivedi_Representation_Similarity_Analysis_for_Efficient_Task_Taxonomy__Transfer_Learning_CVPR_2019_paper.pdf)] [[code](https://github.com/StanfordVL/taskonomy)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Representation%20Similarity%20Analysis%20for%20Efficient%20Task%20taxonomy%20%26%20Transfer%20Learning.pdf)] (1)
 - Scene Memory Transformer for Embodied Agents in Long-Horizon Tasks, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Fang_Scene_Memory_Transformer_for_Embodied_Agents_in_Long-Horizon_Tasks_CVPR_2019_paper.pdf)] [[video](https://sites.google.com/view/scene-memory-transformer)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Scene%20Memory%20Transformer%20for%20Embodied%20Agents%20in%20Long-Horizon%20Tasks.pdf)] (1)
 - Gaussian Temporal Awareness Networks for Action Localization, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Long_Gaussian_Temporal_Awareness_Networks_for_Action_Localization_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Gaussian%20Temporal%20Awareness%20Networks%20for%20Action%20Localization.pdf)] (1)
