Pyramid Feature Attention Network for Saliency detection, CVPR 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Pyramid Feature Attention Network for Saliency detection, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhao_Pyramid_Feature_Attention_Network_for_Saliency_Detection_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Pyramid%20Feature%20Attention%20Network%20for%20Saliency%20detection.pdf)] (1)
 - Universal Domain Adaptation, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/You_Universal_Domain_Adaptation_CVPR_2019_paper.pdf)] [[code](https://github.com/thuml/Universal-Domain-Adaptation)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Universal%20Domain%20Adaptation.pdf)] (1)
 - Bidirectional Learning for Domain Adaptation of Semantic Segmentation, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Li_Bidirectional_Learning_for_Domain_Adaptation_of_Semantic_Segmentation_CVPR_2019_paper.pdf)] [[code](https://github.com/liyunsheng13/BDL)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Bidirectional%20Learning%20for%20Domain%20Adaptation%20of%20Semantic%20Segmentation.pdf)] (1)
 - Representation Similarity Analysis for Efficient Task taxonomy & Transfer Learning, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Dwivedi_Representation_Similarity_Analysis_for_Efficient_Task_Taxonomy__Transfer_Learning_CVPR_2019_paper.pdf)] [[code](https://github.com/StanfordVL/taskonomy)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Representation%20Similarity%20Analysis%20for%20Efficient%20Task%20taxonomy%20%26%20Transfer%20Learning.pdf)] (1)
