--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Not All Areas Are Equal: Transfer Learning for Semantic Segmentation via Hierarchical Region Selection, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Sun_Not_All_Areas_Are_Equal_Transfer_Learning_for_Semantic_Segmentation_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Not%20All%20Areas%20Are%20Equal-%20Transfer%20Learning%20for%20Semantic%20Segmentation%20via%20Hierarchical%20Region%20Selection.pdf)] (1)
 - CRAVES: Controlling Robotic Arm with a Vision-based Economic System, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Zuo_CRAVES_Controlling_Robotic_Arm_With_a_Vision-Based_Economic_System_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/CRAVES-%20Controlling%20Robotic%20Arm%20with%20a%20Vision-based%20Economic%20System.pdf)] (1)
 - Pyramid Feature Attention Network for Saliency detection, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhao_Pyramid_Feature_Attention_Network_for_Saliency_Detection_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Pyramid%20Feature%20Attention%20Network%20for%20Saliency%20detection.pdf)] (1)
 - Universal Domain Adaptation, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/You_Universal_Domain_Adaptation_CVPR_2019_paper.pdf)] [[code](https://github.com/thuml/Universal-Domain-Adaptation)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Universal%20Domain%20Adaptation.pdf)] (1)
