Learning to Manipulate Object Collections Using Grounded State Representations, CoRL 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Learning to Manipulate Object Collections Using Grounded State Representations, CoRL 2019 [[paper](https://arxiv.org/pdf/1909.07876.pdf)] [[blog](https://matwilso.github.io/projects/object_collections)] [[code](https://github.com/matwilso/object_collections)] [[video0](https://www.youtube.com/watch?v=eCf3jamz5IM&feature=emb_title)] [[video1](https://www.youtube.com/watch?v=zj8Hne5ssYw&feature=emb_title)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20to%20Manipulate%20Object%20Collections%20Using%20Grounded%20State%20Representations.pdf)] (1)
 - Multi-Frame GAN: Image Enhancement for Stereo Visual Odometry in Low Light, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.06632.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Multi-Frame%20GAN-%20Image%20Enhancement%20for%20Stereo%20Visual%20Odometry%20in%20Low%20Light.pdf)] (1)
 - Not All Areas Are Equal: Transfer Learning for Semantic Segmentation via Hierarchical Region Selection, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Sun_Not_All_Areas_Are_Equal_Transfer_Learning_for_Semantic_Segmentation_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Not%20All%20Areas%20Are%20Equal-%20Transfer%20Learning%20for%20Semantic%20Segmentation%20via%20Hierarchical%20Region%20Selection.pdf)] (1)
 - CRAVES: Controlling Robotic Arm with a Vision-based Economic System, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Zuo_CRAVES_Controlling_Robotic_Arm_With_a_Vision-Based_Economic_System_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/CRAVES-%20Controlling%20Robotic%20Arm%20with%20a%20Vision-based%20Economic%20System.pdf)] (1)
