TuneNet: One-Shot Residual Tuning for System Identification and Sim-to-Real Robot Task Transfer, CoRL 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- TuneNet: One-Shot Residual Tuning for System Identification and Sim-to-Real Robot Task Transfer, CoRL 2019 [[paper](https://arxiv.org/pdf/1907.11200.pdf)] [[video](https://www.youtube.com/watch?v=Ux2pSmZx3uE&feature=youtu.be)] [[code](https://github.com/Kukanani/tune-net-release)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/TuneNet-%20One-Shot%20Residual%20Tuning%20for%20System%20Identification%20and%20Sim-to-Real%20Robot%20Task%20Transfer.pdf)] (1)
 - A Survey on Reproducibility by Evaluating Deep Reinforcement Learning Algorithms on Real-World Robots, CoRL 2019 [[paper](https://arxiv.org/pdf/1909.03772.pdf)] [[code](https://github.com/kindredresearch/SenseAct/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/A%20Survey%20on%20Reproducibility%20by%20Evaluating%20Deep%20Reinforcement%20Learning%20Algorithms%20on%20Real-World%20Robots.pdf)] (1)
 - Asynchronous Methods for Model-Based Reinforcement Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.12453.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Asynchronous%20Methods%20for%20Model-Based%20Reinforcement%20Learning.pdf)] (1)
 - Learning to Manipulate Object Collections Using Grounded State Representations, CoRL 2019 [[paper](https://arxiv.org/pdf/1909.07876.pdf)] [[blog](https://matwilso.github.io/projects/object_collections)] [[code](https://github.com/matwilso/object_collections)] [[video0](https://www.youtube.com/watch?v=eCf3jamz5IM&feature=emb_title)] [[video1](https://www.youtube.com/watch?v=zj8Hne5ssYw&feature=emb_title)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20to%20Manipulate%20Object%20Collections%20Using%20Grounded%20State%20Representations.pdf)] (1)
