--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Learning Latent Plans from Play, CoRL 2019 [[paper](https://arxiv.org/pdf/1903.01973.pdf)] [[blog](https://learning-from-play.github.io/)] [[video](https://www.youtube.com/watch?v=b7StSnt85S4&feature=youtu.be&t=12591)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Latent%20Plans%20from%20Play.pdf)] (1)
 - To Follow or not to Follow: Selective Imitation Learning from Observations, CoRL 2019 [[paper](https://youngwoon.github.io/silo/img/lee_corl19.pdf)] [[blog](https://youngwoon.github.io/silo/)] [[video](https://www.youtube.com/watch?v=b7StSnt85S4&feature=youtu.be&t=12591)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/To%20Follow%20or%20not%20to%20Follow-%20Selective%20Imitation%20Learning%20from%20Observations.pdf)] (1)
 - Active Domain Randomization, CoRL 2019 [[paper](https://arxiv.org/pdf/1904.04762.pdf)] [[code](https://github.com/montrealrobotics/active-domainrand)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Active%20Domain%20Randomization.pdf)] (1)
 - TuneNet: One-Shot Residual Tuning for System Identification and Sim-to-Real Robot Task Transfer, CoRL 2019 [[paper](https://arxiv.org/pdf/1907.11200.pdf)] [[video](https://www.youtube.com/watch?v=Ux2pSmZx3uE&feature=youtu.be)] [[code](https://github.com/Kukanani/tune-net-release)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/TuneNet-%20One-Shot%20Residual%20Tuning%20for%20System%20Identification%20and%20Sim-to-Real%20Robot%20Task%20Transfer.pdf)] (1)
