Adversarial Active Exploration for Inverse Dynamics Model Learning, CoRL 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Adversarial Active Exploration for Inverse Dynamics Model Learning, CoRL 2019 [[paper](https://tsujuifu.github.io/pubs/corl19_self-adv.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Adversarial%20Active%20Exploration%20for%20Inverse%20Dynamics%20Model%20Learning.pdf)] (1)
 - Learning Locomotion Skills for Cassie: Iterative Design and Sim-to-Real, CoRL 2019 [[paper](https://zhaomingxie.github.io/publications/corl_2019.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Locomotion%20Skills%20for%20Cassie-%20Iterative%20Design%20and%20Sim-to-Real.pdf)] (1)
 - Learning Latent Plans from Play, CoRL 2019 [[paper](https://arxiv.org/pdf/1903.01973.pdf)] [[blog](https://learning-from-play.github.io/)] [[video](https://www.youtube.com/watch?v=b7StSnt85S4&feature=youtu.be&t=12591)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Latent%20Plans%20from%20Play.pdf)] (1)
 - To Follow or not to Follow: Selective Imitation Learning from Observations, CoRL 2019 [[paper](https://youngwoon.github.io/silo/img/lee_corl19.pdf)] [[blog](https://youngwoon.github.io/silo/)] [[video](https://www.youtube.com/watch?v=b7StSnt85S4&feature=youtu.be&t=12591)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/To%20Follow%20or%20not%20to%20Follow-%20Selective%20Imitation%20Learning%20from%20Observations.pdf)] (1)
