--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- RoboNet: Large-Scale Multi-Robot Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11215.pdf)] [[blog](https://www.robonet.wiki/)] [[video](https://www.youtube.com/watch?time_continue=2&v=qd-sBiKGLn4&feature=emb_title)] [[code](https://github.com/SudeepDasari/RoboNet)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/RoboNet-%20Large-Scale%20Multi-Robot%20Learning.pdf)] (1)
 - Adversarial Active Exploration for Inverse Dynamics Model Learning, CoRL 2019 [[paper](https://tsujuifu.github.io/pubs/corl19_self-adv.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Adversarial%20Active%20Exploration%20for%20Inverse%20Dynamics%20Model%20Learning.pdf)] (1)
 - Learning Locomotion Skills for Cassie: Iterative Design and Sim-to-Real, CoRL 2019 [[paper](https://zhaomingxie.github.io/publications/corl_2019.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Locomotion%20Skills%20for%20Cassie-%20Iterative%20Design%20and%20Sim-to-Real.pdf)] (1)
 - Learning Latent Plans from Play, CoRL 2019 [[paper](https://arxiv.org/pdf/1903.01973.pdf)] [[blog](https://learning-from-play.github.io/)] [[video](https://www.youtube.com/watch?v=b7StSnt85S4&feature=youtu.be&t=12591)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Latent%20Plans%20from%20Play.pdf)] (1)
