Relay Policy Learning: Solving Long-Horizon Tasks via Imitation and Reinforcement Learning, CoRL 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Relay Policy Learning: Solving Long-Horizon Tasks via Imitation and Reinforcement Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11956.pdf)] [[blog](https://relay-policy-learning.github.io/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Relay%20Policy%20Learning-%20Solving%20Long-Horizon%20Tasks%20via%20Imitation%20and%20Reinforcement%20Learning.pdf)] (1)
 - Learning Navigation Subroutines from Egocentric Videos, CoRL 2019 [[paper](https://arxiv.org/pdf/1905.12612.pdf)] [[blog](https://ashishkumar1993.github.io/subroutines/)] [[video](https://www.youtube.com/watch?v=Q-wv7KHTSqw&feature=emb_title)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Navigation%20Subroutines%20from%20Egocentric%20Videos.pdf)] (1)
 - ROBEL: Robotics Benchmarks for Learning with Low-Cost Robots, CoRL 2019 [[paper](https://arxiv.org/pdf/1909.11639.pdf)] [[blog](https://sites.google.com/view/roboticsbenchmarks/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/ROBEL-%20Robotics%20Benchmarks%20for%20Learning%20with%20Low-Cost%20Robots.pdf)] (1)
 - RoboNet: Large-Scale Multi-Robot Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11215.pdf)] [[blog](https://www.robonet.wiki/)] [[video](https://www.youtube.com/watch?time_continue=2&v=qd-sBiKGLn4&feature=emb_title)] [[code](https://github.com/SudeepDasari/RoboNet)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/RoboNet-%20Large-Scale%20Multi-Robot%20Learning.pdf)] (1)
