Contextual Imagined Goals for Self-Supervised Robotic Learning, CoRL 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Contextual Imagined Goals for Self-Supervised Robotic Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11670.pdf)] [[blog](https://ccrig.github.io/)] [[video](https://www.youtube.com/watch?v=Cqp_phACou0)] [[code](https://github.com/anair13/rlkit/tree/ccrig/examples/ccrig)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Contextual%20Imagined%20Goals%20for%20Self-Supervised%20Robotic%20Learning.pdf)] (1)
 - HRL4IN: Hierarchical Reinforcement Learning for Interactive Navigation with Mobile Manipulators, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11432.pdf)] [[blog](https://sites.google.com/view/hrl4in)] [[code](https://github.com/ChengshuLi/HRL4IN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/HRL4IN-%20Hierarchical%20Reinforcement%20Learning%20for%20Interactive%20Navigation%20with%20Mobile%20Manipulators.pdf)] (1)
 - Relay Policy Learning: Solving Long-Horizon Tasks via Imitation and Reinforcement Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11956.pdf)] [[blog](https://relay-policy-learning.github.io/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Relay%20Policy%20Learning-%20Solving%20Long-Horizon%20Tasks%20via%20Imitation%20and%20Reinforcement%20Learning.pdf)] (1)
 - Learning Navigation Subroutines from Egocentric Videos, CoRL 2019 [[paper](https://arxiv.org/pdf/1905.12612.pdf)] [[blog](https://ashishkumar1993.github.io/subroutines/)] [[video](https://www.youtube.com/watch?v=Q-wv7KHTSqw&feature=emb_title)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Learning%20Navigation%20Subroutines%20from%20Egocentric%20Videos.pdf)] (1)
