Autoencoding Beyond Pixels using a Learned Similarity Metric, ICML 2016 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Autoencoding Beyond Pixels using a Learned Similarity Metric, ICML 2016 [[paper](https://arxiv.org/pdf/1512.09300.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2016/Autoencoding%20Beyond%20Pixels%20using%20a%20Learned%20Similarity%20Metric.pdf)] (1)
 - Auto-Encoding Variational Bayes, ICLR 2014 [[paper](https://arxiv.org/pdf/1312.6114.pdf)] [[video](https://www.youtube.com/watch?v=rjZL7aguLAs)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2014/Auto-Encoding%20Variational%20Bayes.pdf)] (1)
 - Contextual Imagined Goals for Self-Supervised Robotic Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11670.pdf)] [[blog](https://ccrig.github.io/)] [[video](https://www.youtube.com/watch?v=Cqp_phACou0)] [[code](https://github.com/anair13/rlkit/tree/ccrig/examples/ccrig)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Contextual%20Imagined%20Goals%20for%20Self-Supervised%20Robotic%20Learning.pdf)] (1)
 - HRL4IN: Hierarchical Reinforcement Learning for Interactive Navigation with Mobile Manipulators, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11432.pdf)] [[blog](https://sites.google.com/view/hrl4in)] [[code](https://github.com/ChengshuLi/HRL4IN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/HRL4IN-%20Hierarchical%20Reinforcement%20Learning%20for%20Interactive%20Navigation%20with%20Mobile%20Manipulators.pdf)] (1)
