SinGAN: Learning a Generative Model from a Single Natural Image, ICCV 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- SinGAN: Learning a Generative Model from a Single Natural Image, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Shaham_SinGAN_Learning_a_Generative_Model_From_a_Single_Natural_Image_ICCV_2019_paper.pdf)] [[code](https://github.com/tamarott/SinGAN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/SinGAN-%20Learning%20a%20Generative%20Model%20from%20a%20Single%20Natural%20Image.pdf)] (1)
 - A Style-Based Generator Architecture for Generative Adversarial Networks, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Karras_A_Style-Based_Generator_Architecture_for_Generative_Adversarial_Networks_CVPR_2019_paper.pdf)] [[code](https://github.com/NVlabs/stylegan)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/A%20Style-Based%20Generator%20Architecture%20for%20Generative%20Adversarial%20Networks.pdf)] (1)
 - Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks, CVPR 2017 [[paper](http://openaccess.thecvf.com/content_ICCV_2017/papers/Zhu_Unpaired_Image-To-Image_Translation_ICCV_2017_paper.pdf)] [[blog](https://junyanz.github.io/CycleGAN/)] [[code](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2017/Unpaired%20Image-to-Image%20Translation%20using%20Cycle-Consistent%20Adversarial%20Networks.pdf)] (1)
 - Generating Diverse High-Fidelity Images with VQ-VAE-2, NeurIPS 2019 [[paper](https://papers.nips.cc/paper/9625-generating-diverse-high-fidelity-images-with-vq-vae-2.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2019/Generating%20Diverse%20High-Fidelity%20Images%20with%20VQ-VAE-2.pdf)] (1)
