Learning Aberrance Repressed Correlation Filters for Real-Time UAV Tracking, ICCV 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Learning Aberrance Repressed Correlation Filters for Real-Time UAV Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Huang_Learning_Aberrance_Repressed_Correlation_Filters_for_Real-Time_UAV_Tracking_ICCV_2019_paper.pdf)] [[code](https://github.com/vision4robotics/ARCF-tracker)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Learning%20Aberrance%20Repressed%20Correlation%20Filters%20for%20Real-Time%20UAV%20Tracking.pdf)] (1)
 - Learning Discriminative Model Prediction for Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Bhat_Learning_Discriminative_Model_Prediction_for_Tracking_ICCV_2019_paper.pdf)] [[code](https://github.com/visionml/pytracking)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Learning%20Discriminative%20Model%20Prediction%20for%20Tracking.pdf)] (1)
 - SinGAN: Learning a Generative Model from a Single Natural Image, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Shaham_SinGAN_Learning_a_Generative_Model_From_a_Single_Natural_Image_ICCV_2019_paper.pdf)] [[code](https://github.com/tamarott/SinGAN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/SinGAN-%20Learning%20a%20Generative%20Model%20from%20a%20Single%20Natural%20Image.pdf)] (1)
 - A Style-Based Generator Architecture for Generative Adversarial Networks, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Karras_A_Style-Based_Generator_Architecture_for_Generative_Adversarial_Networks_CVPR_2019_paper.pdf)] [[code](https://github.com/NVlabs/stylegan)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/A%20Style-Based%20Generator%20Architecture%20for%20Generative%20Adversarial%20Networks.pdf)] (1)
