--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Quo Vadis, Action Recognition? A New Model and the Kinetics Dataset, CVPR 2017 [[paper](http://openaccess.thecvf.com/content_cvpr_2017/papers/Carreira_Quo_Vadis_Action_CVPR_2017_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2017/Quo%20Vadis%2C%20Action%20Recognition%3F%20A%20New%20Model%20and%20the%20Kinetics%20Dataset.pdf)] (1)
 - Cross-Classification Clustering: An Efficient Multi-Object Tracking Technique for 3-D Instance Segmentation in Connectomics, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Meirovitch_Cross-Classification_Clustering_An_Efficient_Multi-Object_Tracking_Technique_for_3-D_Instance_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Cross-Classification%20Clustering-%20An%20Efficient%20Multi-Object%20Tracking%20Technique%20for%203-D%20Instance%20Segmentation%20in%20Connectomics.pdf)] (1)
 - Physical Adversarial Textures That Fool Visual Object Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Wiyatno_Physical_Adversarial_Textures_That_Fool_Visual_Object_Tracking_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Physical%20Adversarial%20Textures%20That%20Fool%20Visual%20Object%20Tracking.pdf)] (1)
 - Efficient Online Multi-Person 2D Pose Tracking with Recurrent Spatio-Temporal Affinity Fields, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Raaj_Efficient_Online_Multi-Person_2D_Pose_Tracking_With_Recurrent_Spatio-Temporal_Affinity_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Efficient%20Online%20Multi-Person%202D%20Pose%20Tracking%20with%20Recurrent%20Spatio-Temporal%20Affinity%20Fields.pdf)] (1)
