Videos as Space-Time Region Graphs, ECCV 2018 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Videos as Space-Time Region Graphs, ECCV 2018 [[paper](https://eccv2018.org/openaccess/content_ECCV_2018/papers/Xiaolong_Wang_Videos_as_Space-Time_ECCV_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ECCV/ECCV_2018/Videos%20as%20Space-Time%20Region%20Graphs.pdf)] (1)
 - Non-local Neural Networks, CVPR 2018 [[paper](http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Non-Local_Neural_Networks_CVPR_2018_paper.pdf)] [[code](https://github.com/facebookresearch/video-nonlocal-net)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Non-local%20Neural%20Networks.pdf)] (1)
 - End-to-end Learning of Action Detection from Frame Glimpses in Videos, CVPR 2016 [[paper](https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Yeung_End-To-End_Learning_of_CVPR_2016_paper.pdf)] [[blog](http://ai.stanford.edu/~syyeung/frameglimpses.html)] [[code](https://github.com/syyeung/frameglimpses)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2016/End-to-end%20Learning%20of%20Action%20Detection%20from%20Frame%20Glimpses%20in%20Videos.pdf)] (1)
 - Quo Vadis, Action Recognition? A New Model and the Kinetics Dataset, CVPR 2017 [[paper](http://openaccess.thecvf.com/content_cvpr_2017/papers/Carreira_Quo_Vadis_Action_CVPR_2017_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2017/Quo%20Vadis%2C%20Action%20Recognition%3F%20A%20New%20Model%20and%20the%20Kinetics%20Dataset.pdf)] (1)
