Temporal Gaussian Mixture Layer for Videos, ICML 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Feb
+- Temporal Gaussian Mixture Layer for Videos, ICML 2019 [[paper](http://proceedings.mlr.press/v97/piergiovanni19a/piergiovanni19a.pdf)] [[slide](https://icml.cc/media/Slides/icml/2019/seasideball(11-16-00)-11-17-15-4552-temporal_gaussi.pdf)] [[code](https://github.com/piergiaj/tgm-icml19)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2019/Temporal%20Gaussian%20Mixture%20Layer%20for%20Videos.pdf)] (1)
 - Videos as Space-Time Region Graphs, ECCV 2018 [[paper](https://eccv2018.org/openaccess/content_ECCV_2018/papers/Xiaolong_Wang_Videos_as_Space-Time_ECCV_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ECCV/ECCV_2018/Videos%20as%20Space-Time%20Region%20Graphs.pdf)] (1)
 - Non-local Neural Networks, CVPR 2018 [[paper](http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Non-Local_Neural_Networks_CVPR_2018_paper.pdf)] [[code](https://github.com/facebookresearch/video-nonlocal-net)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Non-local%20Neural%20Networks.pdf)] (1)
 - End-to-end Learning of Action Detection from Frame Glimpses in Videos, CVPR 2016 [[paper](https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Yeung_End-To-End_Learning_of_CVPR_2016_paper.pdf)] [[blog](http://ai.stanford.edu/~syyeung/frameglimpses.html)] [[code](https://github.com/syyeung/frameglimpses)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2016/End-to-end%20Learning%20of%20Action%20Detection%20from%20Frame%20Glimpses%20in%20Videos.pdf)] (1)
