Hindsight Experience Replay, NIPS 2017 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,3 +1,6 @@
+2020 Mar
+- Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
+
 2020 Feb
 - Temporal Gaussian Mixture Layer for Videos, ICML 2019 [[paper](http://proceedings.mlr.press/v97/piergiovanni19a/piergiovanni19a.pdf)] [[slide](https://icml.cc/media/Slides/icml/2019/seasideball(11-16-00)-11-17-15-4552-temporal_gaussi.pdf)] [[code](https://github.com/piergiaj/tgm-icml19)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2019/Temporal%20Gaussian%20Mixture%20Layer%20for%20Videos.pdf)] (1)
 - Videos as Space-Time Region Graphs, ECCV 2018 [[paper](https://eccv2018.org/openaccess/content_ECCV_2018/papers/Xiaolong_Wang_Videos_as_Space-Time_ECCV_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ECCV/ECCV_2018/Videos%20as%20Space-Time%20Region%20Graphs.pdf)] (1)
