--- a/records/Y2019.md
+++ b/records/Y2019.md
@@ -15,7 +15,7 @@
 - Motion Perception in Reinforcement Learning with Dynamic Objects [[paper](http://proceedings.mlr.press/v87/amiranashvili18a/amiranashvili18a.pdf)] [[code](https://github.com/lmb-freiburg/flow_rl)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2018/Motion%20Perception%20in%20Reinforcement%20Learning%20with%20Dynamic%20Objects.pdf)] (1)
 - Tiny Video Networks [[paper](https://arxiv.org/pdf/1910.06961.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/others/Tiny%20Video%20Networks.pdf)] (1)
 - SplitNet: Sim2Sim and Task2Task Transfer for Embodied Visual Navigation [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Gordon_SplitNet_Sim2Sim_and_Task2Task_Transfer_for_Embodied_Visual_Navigation_ICCV_2019_paper.pdf)] [[code](https://github.com/facebookresearch/splitnet)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/SplitNet-%20Sim2Sim%20and%20Task2Task%20Transfer%20for%20Embodied%20Visual%20Navigation.pdf)] (2)
-- Model-based Behavioral Cloning with Future Image Similarity Learning [[paper](https://arxiv.org/pdf/1910.03157.pdf)] [[code](https://github.com/anwu21/future-image-similarity)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/others/Model-based%20Behavioral%20Cloning%20with%20Future%20Image%20Similarity%20Learning.pdf)] (2)
+- Model-based Behavioral Cloning with Future Image Similarity Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.03157.pdf)] [[code](https://github.com/anwu21/future-image-similarity)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/others/Model-based%20Behavioral%20Cloning%20with%20Future%20Image%20Similarity%20Learning.pdf)] (3)
 
 2019 Oct
 - Drop an Octave: Reducing Spatial Redundancy in Convolutional Neural Networks with Octave Convolution, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Chen_Drop_an_Octave_Reducing_Spatial_Redundancy_in_Convolutional_Neural_Networks_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Drop%20an%20Octave-%20Reducing%20Spatial%20Redundancy%20in%20Convolutional%20Neural%20Networks%20with%20Octave%20Convolution.pdf)] (1)
