Leveraging Unlabeled Data for Crowd Counting by Learning to Rank, CVPR 2018 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,23 +1,37 @@
 2020 Mar
+
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
+
 2020 Feb
+
+---
+Cloud Counting
+- Leveraging Unlabeled Data for Crowd Counting by Learning to Rank, CVPR 2018 [[paper](https://openaccess.thecvf.com/content_cvpr_2018/papers/Liu_Leveraging_Unlabeled_Data_CVPR_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Leveraging%20Unlabeled%20Data%20for%20Crowd%20Counting%20by%20Learning%20to%20Rank.pdf)] (1)
+
+---
+Video Representation
 - Temporal Gaussian Mixture Layer for Videos, ICML 2019 [[paper](http://proceedings.mlr.press/v97/piergiovanni19a/piergiovanni19a.pdf)] [[slide](https://icml.cc/media/Slides/icml/2019/seasideball(11-16-00)-11-17-15-4552-temporal_gaussi.pdf)] [[code](https://github.com/piergiaj/tgm-icml19)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2019/Temporal%20Gaussian%20Mixture%20Layer%20for%20Videos.pdf)] (1)
 - Videos as Space-Time Region Graphs, ECCV 2018 [[paper](https://eccv2018.org/openaccess/content_ECCV_2018/papers/Xiaolong_Wang_Videos_as_Space-Time_ECCV_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ECCV/ECCV_2018/Videos%20as%20Space-Time%20Region%20Graphs.pdf)] (1)
 - Non-local Neural Networks, CVPR 2018 [[paper](http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Non-Local_Neural_Networks_CVPR_2018_paper.pdf)] [[code](https://github.com/facebookresearch/video-nonlocal-net)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Non-local%20Neural%20Networks.pdf)] (1)
 - End-to-end Learning of Action Detection from Frame Glimpses in Videos, CVPR 2016 [[paper](https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Yeung_End-To-End_Learning_of_CVPR_2016_paper.pdf)] [[blog](http://ai.stanford.edu/~syyeung/frameglimpses.html)] [[code](https://github.com/syyeung/frameglimpses)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2016/End-to-end%20Learning%20of%20Action%20Detection%20from%20Frame%20Glimpses%20in%20Videos.pdf)] (1)
 - Quo Vadis, Action Recognition? A New Model and the Kinetics Dataset, CVPR 2017 [[paper](http://openaccess.thecvf.com/content_cvpr_2017/papers/Carreira_Quo_Vadis_Action_CVPR_2017_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2017/Quo%20Vadis%2C%20Action%20Recognition%3F%20A%20New%20Model%20and%20the%20Kinetics%20Dataset.pdf)] (1)
+---
+Tracking
 - Cross-Classification Clustering: An Efficient Multi-Object Tracking Technique for 3-D Instance Segmentation in Connectomics, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Meirovitch_Cross-Classification_Clustering_An_Efficient_Multi-Object_Tracking_Technique_for_3-D_Instance_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Cross-Classification%20Clustering-%20An%20Efficient%20Multi-Object%20Tracking%20Technique%20for%203-D%20Instance%20Segmentation%20in%20Connectomics.pdf)] (1)
 - Physical Adversarial Textures That Fool Visual Object Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Wiyatno_Physical_Adversarial_Textures_That_Fool_Visual_Object_Tracking_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Physical%20Adversarial%20Textures%20That%20Fool%20Visual%20Object%20Tracking.pdf)] (1)
 - Efficient Online Multi-Person 2D Pose Tracking with Recurrent Spatio-Temporal Affinity Fields, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Raaj_Efficient_Online_Multi-Person_2D_Pose_Tracking_With_Recurrent_Spatio-Temporal_Affinity_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Efficient%20Online%20Multi-Person%202D%20Pose%20Tracking%20with%20Recurrent%20Spatio-Temporal%20Affinity%20Fields.pdf)] (1)
 - Learning Aberrance Repressed Correlation Filters for Real-Time UAV Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Huang_Learning_Aberrance_Repressed_Correlation_Filters_for_Real-Time_UAV_Tracking_ICCV_2019_paper.pdf)] [[code](https://github.com/vision4robotics/ARCF-tracker)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Learning%20Aberrance%20Repressed%20Correlation%20Filters%20for%20Real-Time%20UAV%20Tracking.pdf)] (1)
 - Learning Discriminative Model Prediction for Tracking, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Bhat_Learning_Discriminative_Model_Prediction_for_Tracking_ICCV_2019_paper.pdf)] [[code](https://github.com/visionml/pytracking)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Learning%20Discriminative%20Model%20Prediction%20for%20Tracking.pdf)] (1)
+---
+Generative Models
 - SinGAN: Learning a Generative Model from a Single Natural Image, ICCV 2019 [[paper](http://openaccess.thecvf.com/content_ICCV_2019/papers/Shaham_SinGAN_Learning_a_Generative_Model_From_a_Single_Natural_Image_ICCV_2019_paper.pdf)] [[code](https://github.com/tamarott/SinGAN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/SinGAN-%20Learning%20a%20Generative%20Model%20from%20a%20Single%20Natural%20Image.pdf)] (1)
 - A Style-Based Generator Architecture for Generative Adversarial Networks, CVPR 2019 [[paper](http://openaccess.thecvf.com/content_CVPR_2019/papers/Karras_A_Style-Based_Generator_Architecture_for_Generative_Adversarial_Networks_CVPR_2019_paper.pdf)] [[code](https://github.com/NVlabs/stylegan)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/A%20Style-Based%20Generator%20Architecture%20for%20Generative%20Adversarial%20Networks.pdf)] (1)
 - Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks, CVPR 2017 [[paper](http://openaccess.thecvf.com/content_ICCV_2017/papers/Zhu_Unpaired_Image-To-Image_Translation_ICCV_2017_paper.pdf)] [[blog](https://junyanz.github.io/CycleGAN/)] [[code](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2017/Unpaired%20Image-to-Image%20Translation%20using%20Cycle-Consistent%20Adversarial%20Networks.pdf)] (1)
 - Generating Diverse High-Fidelity Images with VQ-VAE-2, NeurIPS 2019 [[paper](https://papers.nips.cc/paper/9625-generating-diverse-high-fidelity-images-with-vq-vae-2.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2019/Generating%20Diverse%20High-Fidelity%20Images%20with%20VQ-VAE-2.pdf)] (1)
 - Autoencoding Beyond Pixels using a Learned Similarity Metric, ICML 2016 [[paper](https://arxiv.org/pdf/1512.09300.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2016/Autoencoding%20Beyond%20Pixels%20using%20a%20Learned%20Similarity%20Metric.pdf)] (1)
 - Auto-Encoding Variational Bayes, ICLR 2014 [[paper](https://arxiv.org/pdf/1312.6114.pdf)] [[video](https://www.youtube.com/watch?v=rjZL7aguLAs)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2014/Auto-Encoding%20Variational%20Bayes.pdf)] (1)
+---
 - Contextual Imagined Goals for Self-Supervised Robotic Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11670.pdf)] [[blog](https://ccrig.github.io/)] [[video](https://www.youtube.com/watch?v=Cqp_phACou0)] [[code](https://github.com/anair13/rlkit/tree/ccrig/examples/ccrig)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Contextual%20Imagined%20Goals%20for%20Self-Supervised%20Robotic%20Learning.pdf)] (1)
 - HRL4IN: Hierarchical Reinforcement Learning for Interactive Navigation with Mobile Manipulators, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11432.pdf)] [[blog](https://sites.google.com/view/hrl4in)] [[code](https://github.com/ChengshuLi/HRL4IN)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/HRL4IN-%20Hierarchical%20Reinforcement%20Learning%20for%20Interactive%20Navigation%20with%20Mobile%20Manipulators.pdf)] (1)
 - Relay Policy Learning: Solving Long-Horizon Tasks via Imitation and Reinforcement Learning, CoRL 2019 [[paper](https://arxiv.org/pdf/1910.11956.pdf)] [[blog](https://relay-policy-learning.github.io/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2019/Relay%20Policy%20Learning-%20Solving%20Long-Horizon%20Tasks%20via%20Imitation%20and%20Reinforcement%20Learning.pdf)] (1)
