Bayesian Loss for Crowd Count Estimation with Point Supervision, ICCV 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -8,6 +8,7 @@
 ---
 Cloud Counting
 - Leveraging Unlabeled Data for Crowd Counting by Learning to Rank, CVPR 2018 [[paper](https://openaccess.thecvf.com/content_cvpr_2018/papers/Liu_Leveraging_Unlabeled_Data_CVPR_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Leveraging%20Unlabeled%20Data%20for%20Crowd%20Counting%20by%20Learning%20to%20Rank.pdf)] (1)
+- Bayesian Loss for Crowd Count Estimation with Point Supervision, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Ma_Bayesian_Loss_for_Crowd_Count_Estimation_With_Point_Supervision_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Bayesian%20Loss%20for%20Crowd%20Count%20Estimation%20with%20Point%20Supervision.pdf)] (1)
 
 ---
 Video Representation
