Unsupervised Visual Representation Learning by Context Prediction, ICCV 2015 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -2,6 +2,10 @@
 
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
+---
+Self-Supervised Learning
+- Unsupervised Visual Representation Learning by Context Prediction, ICCV 2015 [[paper](https://www.cv-foundation.org/openaccess/content_iccv_2015/papers/Doersch_Unsupervised_Visual_Representation_ICCV_2015_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2015/Unsupervised%20Visual%20Representation%20Learning%20by%20Context%20Prediction.pdf)] (1)
+---
 
 2020 Feb
 
