--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -5,6 +5,7 @@
 ---
 Self-Supervised Learning
 - Unsupervised Visual Representation Learning by Context Prediction, ICCV 2015 [[paper](https://www.cv-foundation.org/openaccess/content_iccv_2015/papers/Doersch_Unsupervised_Visual_Representation_ICCV_2015_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2015/Unsupervised%20Visual%20Representation%20Learning%20by%20Context%20Prediction.pdf)] (1)
+- Context Encoders: Feature Learning by Inpainting, CVPR 2016 [[paper](https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Pathak_Context_Encoders_Feature_CVPR_2016_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2016/Context%20Encoders-%20Feature%20Learning%20by%20Inpainting.pdf)] (1)
 ---
 
 2020 Feb
